# concello-saf

./: README.md  RESUMO.md  package-lock.json  package.json  run-app.sh  vite.config.js
.github/workflows/: build.yml
doc/: MANUAL_ADMINISTRACION.md  MANUAL_DESENVOLVEMENTO.md
public/: styles.css
saf-tauri-app/: .gitignore  GUIA_INSTALACION.md  MANUAL_ADMINISTRACION.md  MANUAL_DESENVOLVEMENTO.md  QUICKSTART.md  README.md  build.sh  index.html  package-lock.json  package.json  run-app.sh  vite.config.js
saf-tauri-app/src/: App.jsx  main.js
saf-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
saf-tauri-app/src-tauri/src/: backup.rs  commands.rs  database.rs  excel.rs  main.rs  models.rs
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  excel.rs  lock.rs  main.rs  models.rs
