[package]
name = "saf-app"
version = "1.0.0"
description = "SAF - Xestión de Préstamos do Concello de Barreiros"
authors = ["Concello de Barreiros"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-open", "dialog-save", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
xlsxwriter = "0.6"
zip = "0.6"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
fd-lock = "4.0"
printpdf = "0.3.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
